refactor:오류수정